# kit

./: .gitignore  LICENSE  kit.cabal
script/: build.ps1  build.sh  gitWindowsBuild.ps1
src/app/: ExternalCommands.hs  KitM.hs  Main.hs
src/app/Actions/: Branch.hs  Grep.hs  NewBranch.hs  Shove.hs
src/app/UI/: Selection.hs
src/lib/Control/Monad/: Logger.hs
src/lib/Control/Monad/Log/: Class.hs
src/lib/Data/Function/: Suffix.hs
src/lib/Data/List/: Index.hs  Monoid.hs
src/lib/Data/List/NonEmpty/: Index.hs  Ord.hs
src/lib/Data/Map/: List.hs
src/lib/Data/Text/: Split.hs
src/lib/Data/Text/IO/: Class.hs
src/lib/Data/Tree/: Merge.hs  Text.hs
src/lib/System/OsPath/: Text.hs
src/lib/Text/Format/: Justify.hs  Pad.hs
src/lib/Text/Parsec/: Control.hs
src/lib/Text/Parsec/Trans/: Natural.hs
test/: Main.hs
test/Data/Tree/: MergeTests.hs  TextTests.hs
test/Test/QuickCheck/: Subject.hs
test/Test/QuickCheck/Arbitrary/: NonEmpty.hs
